# segun

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  settings.py  utils.py
.github/workflows/: deploy.yml
aws/: ecosystem.config.js  setup_ec2.sh
scripts/: count-tokens.py  create-vector-store.py  generate_keys.sh  get_demo_lectures.sh  scrape-docs.py  seed_db.py
src/: api_service.py  bot_service.py  llm.py  main.py  models.py  mongo.py  run_api.sh  run_bot.sh  settings.py
src/common/: bot.py  commands.py  config.py  logging.py  schema.py  web_client.py
src/old/: main.py  models.py  mongo.py
